force-app/main/default/objects/Service_Request__c/fields/External_Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Ticket Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>