force-app/main/default/objects/Service_Request__c/fields/Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Approval?</label>
    <type>Checkbox</type>
</CustomField>