force-app/main/default/objects/Service_Request__c/recordTypes/Billing_Issue.recordType-meta.xml
<RecordType>
    <fullName>Billing_Issue</fullName>
    <active>true</active>
    <label>Billing Issue</label>
</RecordType>