force-app/main/default/objects/Service_Request__c/recordTypes/Feature_Layout.recordType-meta.xml
<RecordType>
    <fullName>Feature_Layout</fullName>
    <active>true</active>
    <label>Feature Layout</label>
</RecordType>