force-app/main/default/objects/Service_Request__c/recordTypes/Technical_Issue.recordType-meta.xml
<RecordType>
    <fullName>Technical_Issue</fullName>
    <active>true</active>
    <label>Technical Issue</label>
</RecordType>