force-app/main/default/objects/Service_Request__c/listViews/Billing_Support_Service_Request.listView-meta.xml
<ListView>
    <fullName>Billing_Support_Service_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Billing Support</label>
    <queue>Billing_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>