force-app/main/default/objects/Service_Request__c/listViews/Product_Support_Service_Request.listView-meta.xml
<ListView>
    <fullName>Product_Support_Service_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Product Support</label>
    <queue>Product_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>