force-app/main/default/objects/Service_Request__c/listViews/Technical_Support_Service_Request.listView-meta.xml
<ListView>
    <fullName>Technical_Support_Service_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Technical Support</label>
    <queue>Technical_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>